--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,60 +1,60 @@
 .header {
-	position: fixed;
-	top: 0;
-	left: 230px;
-	width: calc(100vw - 230px);
-	height: 60px;
-	display: flex;
-	justify-content: space-between;
-	/* background-color: #101010; */
-	padding: 0 15px;
+    position: fixed;
+    top: 0;
+    left: 230px;
+    width: calc(100vw - 230px);
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 15px;
+    z-index: 99;
 }
 
 .headerNavLeft {
-	display: flex;
-	align-items: center;
-	gap: 25px;
+    display: flex;
+    align-items: center;
+    gap: 25px;
 }
 
 .arrows {
-	display: flex;
-	align-items: center;
-	gap: 20px;
-	padding-left: 20px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding-left: 20px;
 }
 
 .arrows svg {
-	background-color: #000;
-	height: 30px;
-	width: 30px;
-	fill: white;
-	padding: 5px;
-	border-radius: 50%;
-	stroke-width: 80px;
+    background-color: #000;
+    height: 30px;
+    width: 30px;
+    fill: white;
+    padding: 5px;
+    border-radius: 50%;
+    stroke-width: 80px;
 }
 
 .headerNavRight {
-	display: flex;
-	align-items: center;
-	gap: 30px;
+    display: flex;
+    align-items: center;
+    gap: 30px;
 }
 
 .headerNavRight span {
-	color: #ccc;
+    color: #ccc;
 }
 
 .separator {
-	width: 1px;
-	height: 25px;
-	background-color: #fff;
+    width: 1px;
+    height: 25px;
+    background-color: #fff;
 }
 
 .headerNavLink {
-	font-size: 16px;
-	letter-spacing: 1.2px;
-	transition: transform 0.1s;
+    font-size: 16px;
+    letter-spacing: 1.2px;
+    transition: transform 0.1s;
 }
 
 .headerNavLink:hover {
-	transform: scale(1.05);
+    transform: scale(1.05);
 }
