--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,28 +1,28 @@
 .home {
-	background-color: #121212;
-	font-size: 20px;
-	padding: 0 30px;
-	overflow-y: auto;
-	height: 100%;
-	position: relative;
+    background-color: #121212;
+    font-size: 20px;
+    padding: 0 30px;
+    /* overflow-y: auto; */
+    height: 100%;
+    position: relative;
 }
 
 .home > div {
-	margin-top: 350px;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	gap: 20px;
+    margin-top: 350px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .home > div h2 {
-	font-size: 22px;
+    font-size: 22px;
 }
 
 .home > div p {
-	font-size: 16px;
+    font-size: 16px;
 }
 
 .home a {
-	text-decoration: none;
+    text-decoration: none;
 }
