--- a/src/pages/Home/Search/Search.module.css
+++ b/src/pages/Home/Search/Search.module.css
@@ -2,7 +2,8 @@
 	background-color: #121212;
 	width: 100%;
 	height: 100vh;
-	padding: 40px 20px;
+	/* padding: 40px 20px; */
+	padding: 92px 24px 32px;
 }
 
 .searchContainer {
