--- a/src/pages/Home/YourLibrary/YourLibrary.module.css
+++ b/src/pages/Home/YourLibrary/YourLibrary.module.css
@@ -2,10 +2,11 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	flex: 1;
 	height: 100vh;
 	color: white;
-	padding: 20px 32px;
+	/* padding: 20px 32px; */
+	padding: 82px 24px 32px;
+
 	background-color: #121212;
 }
 
