--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,13 +1,14 @@
 .home {
 	background-color: #121212;
 	font-size: 20px;
+
 	min-height: 100vh;
 	padding: 62px 24px 32px;
 	position: relative;
 }
 
 .home > div {
-	margin-top: 350px;
+	transform: translateY(200%);
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -20,6 +21,11 @@
 
 .home > div p {
 	font-size: 16px;
+	font-weight: 600;
+}
+
+.home > div span {
+	font-size: 14px;
 }
 
 .home a {
