--- a/src/pages/Home/YourLibrary/YourLibrary.module.css
+++ b/src/pages/Home/YourLibrary/YourLibrary.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
 	color: white;
 	/* padding: 20px 32px; */
 	padding: 82px 24px 32px;
